# planty-api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
photo_merger/: merge_photos.py
planty/: app.py  config.py  dependencies.py  test_main.http
planty/alembic/: env.py
planty/core/mappers/: plants_mapper.py
planty/core/models/: plant.py  plants.py
planty/core/services/: photo_merger_service.py  plants_service.py
planty/database/: __init__.py  alembic.ini  dbSession.py
planty/database/migrations/: env.py
planty/database/migrations/versions/: 3d5240c4bb2e_init.py
planty/database/models/: base.py  plants.py
planty/enums/: caring_rules_difficulty.py
planty/routers/: plants.py  plants_router.py
planty/services/: plant_service.py  plants_service.py
planty/web/: app.py  config.py
planty/web/routers/: plants_router.py
