[tool.poetry]
name = "planty-api"
version = "0.1.0"
description = ""
authors = ["vlasov-egor <vlasov-egorl@ya.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.18.2"
SQLAlchemy = "^1.4.40"
fastapi = "^0.79.0"
Pillow = "^9.2.0"
psycopg2 = "^2.9.3"
python-multipart = "^0.0.5"
alembic = "^1.8.1"
python-dotenv = "^0.20.0"
pathlib = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"